# invenio-access

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .kwalitee.yml  .travis.invenio.cfg  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  RELEASE-NOTES.rst  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  conf.py  configuration.rst  examplesapp.rst  index.rst  make.bat  overview.rst  requirements.txt  usage.rst
examples/: adminapp.py  app-fixtures.sh  app-setup.sh  app-teardown.sh  app.py  requirements.txt
examples/templates/invenio_access/: base.html  limited.html  open.html
invenio_access/: __init__.py  admin.py  admin_lib.py  api.py  bases.py  cli.py  config.py  context.py  control.py  engine.py  ext.py  factory.py  firerole.py  loaders.py  local_config.py  mailcookie.py  manage.py  models.py  permissions.py  proxies.py  utils.py  version.py
invenio_access/alembic/: 04480be1593e_add_actionsystemroles.py  2069a982633b_add_on_delete_cascade_constraint.py  2f63be7b7572_create_access_tables.py  67ba0de65fbb_create_access_branch.py  842a62b56e60_change_fk_accountsrole_to_string_downgrade.py  dbe499bfda43_prevent_null_in_actionusers_for_.py  f9843093f686_change_fk_accountsrole_to_string_upgrade.py
invenio_access/jsonext/models/: acl_base.cfg
invenio_access/scripts/: authaction.py  webaccessadmin.py
invenio_access/translations/: invenio.pot  messages.pot
invenio_access/translations/af/LC_MESSAGES/: messages.po
invenio_access/translations/ar/LC_MESSAGES/: messages.po
invenio_access/translations/bg/LC_MESSAGES/: messages.po
invenio_access/translations/ca/LC_MESSAGES/: messages.po
invenio_access/translations/cs/LC_MESSAGES/: messages.po
invenio_access/translations/da/LC_MESSAGES/: messages.po
invenio_access/translations/de/LC_MESSAGES/: messages.po
invenio_access/translations/de_AT/LC_MESSAGES/: messages.po
invenio_access/translations/de_DE/LC_MESSAGES/: messages.po
invenio_access/translations/el/LC_MESSAGES/: messages.po
invenio_access/translations/en_AT/LC_MESSAGES/: messages.po
invenio_access/translations/en_HU/LC_MESSAGES/: messages.po
invenio_access/translations/es/LC_MESSAGES/: messages.po
invenio_access/translations/es_CU/LC_MESSAGES/: messages.po
invenio_access/translations/es_MX/LC_MESSAGES/: messages.po
invenio_access/translations/et/LC_MESSAGES/: messages.po
invenio_access/translations/et_EE/LC_MESSAGES/: messages.po
invenio_access/translations/fa/LC_MESSAGES/: messages.po
invenio_access/translations/fa_IR/LC_MESSAGES/: messages.po
invenio_access/translations/fi/LC_MESSAGES/: messages.po
invenio_access/translations/fr/LC_MESSAGES/: messages.po
invenio_access/translations/fr_CI/LC_MESSAGES/: messages.po
invenio_access/translations/fr_FR/LC_MESSAGES/: messages.po
invenio_access/translations/gl/LC_MESSAGES/: messages.po
invenio_access/translations/hi_IN/LC_MESSAGES/: messages.po
invenio_access/translations/hr/LC_MESSAGES/: messages.po
invenio_access/translations/hu/LC_MESSAGES/: messages.po
invenio_access/translations/hu_HU/LC_MESSAGES/: messages.po
invenio_access/translations/it/LC_MESSAGES/: messages.po
invenio_access/translations/ja/LC_MESSAGES/: messages.po
invenio_access/translations/ka/LC_MESSAGES/: messages.po
invenio_access/translations/ko/LC_MESSAGES/: messages.po
invenio_access/translations/lt/LC_MESSAGES/: messages.po
invenio_access/translations/ne/LC_MESSAGES/: messages.po
invenio_access/translations/no/LC_MESSAGES/: messages.po
invenio_access/translations/pl/LC_MESSAGES/: messages.po
invenio_access/translations/pt/LC_MESSAGES/: messages.po
invenio_access/translations/ro/LC_MESSAGES/: messages.po
invenio_access/translations/ru/LC_MESSAGES/: messages.po
invenio_access/translations/rw/LC_MESSAGES/: messages.po
invenio_access/translations/sk/LC_MESSAGES/: messages.po
invenio_access/translations/sv/LC_MESSAGES/: messages.po
invenio_access/translations/sv_SE/LC_MESSAGES/: messages.po
invenio_access/translations/tr/LC_MESSAGES/: messages.po
invenio_access/translations/uk/LC_MESSAGES/: messages.po
invenio_access/translations/uk_UA/LC_MESSAGES/: messages.po
invenio_access/translations/zh-Hant/LC_MESSAGES/: messages.po
invenio_access/translations/zh_CN/LC_MESSAGES/: messages.po
invenio_access/translations/zh_TW/LC_MESSAGES/: messages.po
invenio_access/upgrades/: access_2015_05_06_accROLE_accACTION_accARGUMENT_id.py  access_2015_06_25_id_accARGUMENT_from_zero_to_null.py
invenio_access/views/: admin.py
tests/: conftest.py  test_admin.py  test_cli.py  test_cookie.py  test_examples_app.py  test_firerole.py  test_invenio_access.py  test_invenio_access_cli.py  test_invenio_access_permissions.py  test_invenio_access_permissions_cache.py  test_jsonext_acl.py  test_loaders.py  test_models.py  test_permissions.py  test_permissions_cache.py
