# SPDX-FileCopyrightText: 2015-2022 CERN.
# SPDX-FileCopyrightText: 2022-2026 Graz University of Technology.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-access"
description = "Invenio module for common role based access control."
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "access",
  "invenio",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "invenio-accounts>=9.0.0,<10.0.0",
  "invenio-base>=2.3.0,<3.0.0",
  "invenio-i18n>=4.0.0,<5.0.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-access"

[project.entry-points."flask.commands"]
access = "invenio_access.cli:access"

[project.entry-points."invenio_access.actions"]
"invenio_access.actions" = "invenio_access.permissions:superuser_access"

[project.entry-points."invenio_access.system_roles"]
any_user = "invenio_access.permissions:any_user"
authenticated_user = "invenio_access.permissions:authenticated_user"
system_process = "invenio_access.permissions:system_process"

[project.entry-points."invenio_admin.views"]
invenio_access_action_roles = "invenio_access.admin:action_roles_adminview"
invenio_access_action_system_roles = "invenio_access.admin:action_system_roles_adminview"
invenio_access_action_users = "invenio_access.admin:action_users_adminview"

[project.entry-points."invenio_base.api_apps"]
invenio_access = "invenio_access:InvenioAccess"

[project.entry-points."invenio_base.apps"]
invenio_access = "invenio_access:InvenioAccess"

[project.entry-points."invenio_db.alembic"]
invenio_access = "invenio_access:alembic"

[project.entry-points."invenio_db.models"]
invenio_access = "invenio_access.models"

[project.entry-points."invenio_i18n.translations"]
messages = "invenio_access"

[project.optional-dependencies]
admin = [
  "invenio-admin>=1.2.0,<2.0.0",
]
mysql = []
postgresql = []
sqlite = []
tests = [
  "cachelib>=0.1",
  "invenio-db[mysql, postgresql]>=2.0.0,<3.0.0",
  "pytest-black>=0.6.0",
  "pytest-invenio>=4.0.0,<5.0.0",
  "redis>=2.10.5",
  "sphinx>=4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "invenio_access/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "invenio_access/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_access/translations/messages.pot"
output_dir = "invenio_access/translations/"

[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[tool.hatch.version]
path = "invenio_access/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_access",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_access --cov-report=term-missing'
testpaths = "tests invenio_access"
live_server_scope = "module"
