# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2022 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-access
version = attr: invenio_access.__version__
description = Invenio module for common role based access control.
long_description = file: README.rst, CHANGES.rst
keywords = invenio access
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-access
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    invenio-admin>=1.2.0
    invenio-accounts>=1.4.13
    invenio-base>=1.2.11
    invenio-i18n>=1.3.2

[options.extras_require]
postgresql =
    invenio-db[postgresql]>=1.0.14
mysql =
    invenio-db[mysql]>=1.0.14
sqlite =
    invenio-db>=1.0.14
tests =
    pytest-black>=0.3.0,<0.3.10
    cachelib>=0.1
    pytest-invenio>=1.4.1
    redis>=2.10.5
    sphinx>=4.5

[options.entry_points]
flask.commands =
    access = invenio_access.cli:access
invenio_access.actions =
    invenio_access.actions = invenio_access.permissions:superuser_access
invenio_access.system_roles =
    any_user = invenio_access.permissions:any_user
    authenticated_user = invenio_access.permissions:authenticated_user
    system_process = invenio_access.permissions:system_process
invenio_admin.views =
    invenio_access_action_users = invenio_access.admin:action_users_adminview
    invenio_access_action_roles = invenio_access.admin:action_roles_adminview
    invenio_access_action_system_roles = invenio_access.admin:action_system_roles_adminview
invenio_base.api_apps =
    invenio_access = invenio_access:InvenioAccess
invenio_base.apps =
    invenio_access = invenio_access:InvenioAccess
invenio_db.alembic =
    invenio_access = invenio_access:alembic
invenio_db.models =
    invenio_access = invenio_access.models
invenio_i18n.translations =
    messages = invenio_access

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[compile_catalog]
directory = invenio_access/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_access/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_access/translations/messages.pot
output-dir = invenio_access/translations/

[update_catalog]
input-file = invenio_access/translations/messages.pot
output-dir = invenio_access/translations/

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_access --cov-report=term-missing
testpaths = tests invenio_access
